--- a/src/main/resources/views/home.html
+++ b/src/main/resources/views/home.html
@@ -3,234 +3,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
-	
-	    <meta charset="utf-8" />
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	    <meta name="viewport" content="width=device-width, initial-scale=1" />
-	    <meta name="description" content="" />
-	    <meta name="author" content="" />
-	
-	    <title>Schedule Info App - Home</title>
-	
-	    <!-- Bootstrap Core CSS -->
-	    <link href="/resources/css/bootstrap.min.css" rel="stylesheet" />
-	
-	    <!-- Custom CSS -->
-	    <link href="/resources/css/home.css" rel="stylesheet" />
-	
-	    <!-- Custom Fonts -->
-	    <link href="/resources/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-	    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-	
-	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	    <![endif]-->
-	
+	    <title>Trugrade - Home</title>
 	</head>
 
 <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#">Schedule Maker</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about" th:text="#{common.label.about}"></a>
-                    </li>
-                    <li>
-                        <a href="#how" th:text="#{common.label.how}"></a>
-                    </li>
-                    <li>
-                        <a href="#contact" th:text="#{common.label.contact}"></a>
-                    </li>
-                    <li>
-                        <a href="#signup" th:text="#{common.label.signup}"></a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-
-    <!-- Header -->
-    <div class="intro-header">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Work Tools: Schedule Maker</h1>
-                        <h3 th:text="#{home.about.msg}" />
-                        <hr class="intro-divider" />
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.intro-header -->
-
-    <!-- Page Content -->
-
-    <div id="about" class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer" />
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">
-						<span th:text="#{home.about.body.heading.text}" /><br/>
-						<small th:text="#{home.about.body.subheading.text}"></small>
-                    </h2>
-                    <p class="lead" th:text="#{home.about.body.lead.text.1}" />
-                    <p class="lead" th:text="#{home.about.body.lead.text.2}" />
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="/resources/img/ipad.png" alt="" />
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-    <div id="how" class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer" />
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">
-                    	<span th:text="#{home.how.body.header.text}" />
-                    	<small th:text="#{home.how.body.subheader.text}" />
-                    </h2>
-                    <p class="lead" th:text="#{home.how.body.lead.text.1}" />
-                    <p class="lead" th:text="#{home.how.body.lead.text.2}" />
-                    <ul class="lead">
-                    	<li th:text="#{home.how.body.lead.point.1}" />
-                    	<li th:text="#{home.how.body.lead.point.2}" />
-                    	<li th:text="#{home.how.body.lead.point.3}" />
-                    	<li th:text="#{home.how.body.lead.point.4}" />
-                    </ul>
-                    <p class="lead" th:text="#{home.how.body.lead.text.3}" />
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="/resources/img/dog.png" alt="" />
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <div id="signup" class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer" />
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">
-                    	<span th:text="#{home.signup.body.header.text}" /><br/>
-                    	<small th:text="#{home.signup.body.subheader.text}" />
-                    </h2>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="/resources/img/phones.png" alt="" />
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-    <div id="contact" class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    
-                </div>
-                <div class="col-lg-6">
-
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.banner -->
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#" th:text="#{common.label.home}" />
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about" th:text="#{common.label.about}" />
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#how" th:text="#{common.label.how}" />
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact" th:text="#{common.label.contact}" />
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#signup" th:text="#{common.label.signup}" />
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; TheWorkTools.com 2015. All Rights Reserved</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- jQuery -->
-    <script src="/resources/js/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/resources/js/bootstrap.min.js"></script>
-
+	<h1>Projects</h1>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>Project Name</th>
+			<th>Project Description</th>
+		</tr>
+		<tr th:each="project : ${projects}">
+			<td>
+				<a th:text="${project.id}" th:href="@{'/' + ${project.name}}"></a>
+			</td>
+			<td>
+				<a th:text="${project.name}" th:href="@{'/' + ${project.name}}"></a>
+			</td>
+			<td th:text="${project.description}"></td>
+		</tr>
+	</table>
 </body>
 
 </html>
