Finishing up the initial commit.
Still needs validation, but for the most part the initial features appear to be cleaned up.

--- a/src/main/resources/views/add-testcase.html
+++ b/src/main/resources/views/add-testcase.html
@@ -3,11 +3,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
-	    <title>Add New Test Case</title>
+	    <title>Trugrade - New Test Case</title>
 	</head>
 
 <body>
-	<form action="/testcase/add" method="post">
+	<form th:action="@{'/' + ${project.name} + '/testcases/add'}" method="post">
 		<div class="row">
 			<label class="form-control" for="name">Name: </label>
 			<input class="form-control" name="name" type="text" placeholder="Enter a name" />
