--- a/src/main/resources/views/test-group.html
+++ b/src/main/resources/views/test-group.html
@@ -3,12 +3,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
-	    <title>Trugrade - Test Group: ${testGroup}</title>
+	    <title>Trugrade - Test Group: <span th:text="${testGroup.name}"/></title>
 	</head>
 
 <body>
-	<h1>Test Group ${testGroup}</h1>
-	
+	<h1>Test Group: <span th:text="${testGroup.name}"/></h1>
+	<p>Project: <span th:text="${testGroup.project.name}" /></p>
 	<h2>Test Cases</h2>
 	<table>
 		<tr>
@@ -18,10 +18,10 @@
 		</tr>
 		<tr th:each="testCase : ${testGroup.testCases}">
 			<td>
-				<a th:text="${testCase.id}" th:href="@{'/' + ${testCase.project.name} + '/testcase/' + ${testCase.id}"></a>
+				<a th:text="${testCase.id}" th:href="@{'/' + ${testCase.project.name} + '/testcases/' + ${testCase.id}}"></a>
 			</td>
 			<td>
-				<a th:text="${testCase.name}" th:href="@{'/' + ${testCase.project.name} + '/testcase/' + ${testCase.id}"></a>
+				<a th:text="${testCase.name}" th:href="@{'/' + ${testCase.project.name} + '/testcases/' + ${testCase.id}}"></a>
 			</td>
 			<td th:text="${testCase.description}"></td>
 		</tr>
